--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 cryptomus==1.1
+dj-database-url==2.3.0
 Django==5.1.3
 gunicorn==23.0.0
 idna==3.10
@@ -10,3 +11,4 @@ requests==2.32.3
 sqlparse==0.5.2
 urllib3==2.2.3
 pillow==11.0.0
+psycopg2-binary==2.9.10
